config/kubernetes/redis_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  clusterIP: 10.0.0.236
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis-app
  type: ClusterIP
